tests/negative/typecheck/immutable_index.orng
// immutable_index.orng:8:6: error: cannot modify non-mutable symbol `y`
//     y[0] = 4
//     ^
// 
fn main() -> Int {
    let x: [4]Int = [1, 2, 3, 4]
    let y = []x
    y[0] = 4
    0
}